Added endpoint for XUNITY autotranslator
