# ocr_translate/urls.py
@@ -28,6 +28,7 @@ urlpatterns = [
     path('set_lang/', views.set_lang, name='set_lang'),
     path('get_trans/', views.get_translations, name='get_trans'),
     path('run_tsl/', views.run_tsl, name='run_tsl'),
+    path('run_tsl_get_xunityautotrans/', views.run_tsl_get_xunityautotrans, name='run_tsl_get_xunityautotrans'),
     path('run_ocrtsl/', views.run_ocrtsl, name='run_ocrtsl'),
     path('set_manual_translation/', views.set_manual_translation, name='set_manual_translation'),
     path('get_active_options/', views.get_active_options, name='get_active_options'),
